--- a/src/styles/Book.css
+++ b/src/styles/Book.css
@@ -7,6 +7,7 @@
         border-radius: 4px;
         border: solid 1px #e8e8e8;
         background-color: var(--white);
+        display: flex;
       
 }
 
@@ -38,4 +39,119 @@
         letter-spacing: -0.2px;
         color: var(--black-two);
       
+  }
+
+  .author {
+    width: 6.688rem;
+    height: 1.188rem;
+    margin: 0.25rem 0 0;
+    font-family: RobotoSlab;
+    font-size: 0.875rem;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #4386bf;
+  }
+  .comments {
+    width: 4.563rem;
+    height: 1.188rem;
+    margin: 0.188rem 0.938rem 0.125rem 0;
+    font-family: RobotoSlab;
+    font-size: 0.875rem;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #4386bf;
+    border-right: 1px solid gray;
+  }
+  .remove {
+    border: none;
+    padding: 2px 10px 2px 0;
+    margin-right: 15px;
+    color: #4386bf;
+    background: transparent;
+    font-family: 'Roboto Slab', serif;
+    font-size: 14px;
+    border-right: 2px solid #e8e8e8;
+    cursor: pointer;
+
+  }
+
+  .edit {
+    border: none;
+    padding: 2px 10px 2px 0;
+    margin-right: 15px;
+    color: #4386bf;
+    background: transparent;
+    font-family: 'Roboto Slab', serif;
+    font-size: 14px;
+    cursor: pointer;
+
+  }
+
+  .list {
+      display: flex;
+  }
+
+.card__mid {
+    flex: 1;
+    padding-right: 10px;
+    border-right: 2px solid #e8e8e8;
+  }
+  
+  .progress {
+    display: flex;
+    align-items: center;
+  }
+  
+  .progress-ring {
+    border: 5px solid #e8e8e8;
+    width: 61px;
+    height: 61px;
+    border-radius: 90px;
+    position: relative;
+    margin-right: 15px;
+  }
+  
+  .progress-ring__wrapper {
+    position: absolute;
+    content: "";
+    top: -5px;
+    left: -5px;
+    width: inherit;
+    height: inherit;
+    transform: rotate(-95deg);
+  }
+  
+  .progress-ring__circle {
+    stroke: #307bbe;
+    stroke-width: 5px;
+    stroke-dasharray: 140;
+  }
+  
+  .progress__percent {
+    font-size: 32px;
+    color: #121212;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+  }
+  
+  .progress__status {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    color: #121212;
+    opacity: 0.5;
+  }
+  .Oval-2 {
+    width: 4.25rem;
+    height: 4.25rem;
+    border-style: solid;
+    border-width: 5px;
+    border-image-source: linear-gradient(to bottom, var(--medium-blue), var(--dodger-blue));
+    border-image-slice: 1;
   }
