--- a/src/styles/Book.css
+++ b/src/styles/Book.css
@@ -1,6 +1,4 @@
-b
-
-#bookstore {
+b #bookstore {
   color: #0290ff;
   font-size: 30px;
   font-weight: 700;
@@ -30,16 +28,13 @@ b
   font-size: 44px;
 }
 
-
 .first {
   margin-left: 10px;
 }
 
-
 .btn:not(:first-of-type) {
   border-left: 1px solid #e8e8e8;
 }
-
 
 .chapter {
   color: #969696;
